--- a/orderform.html
+++ b/orderform.html
@@ -2,6 +2,7 @@
 
 <html>
   <head>
+    <h1>Steven Halla</h1>
    <title>Bob's Auto Parts - Order Form</title>
   </head>
   <body>
@@ -11,6 +12,7 @@
       <td style="width: 150px; text-align: center;">Item</td>
       <td style="width: 15px; text-align: center;">Quantity</td>
     </tr>
+
     <tr>
       <td>Tires</td>
       <td><input type="text" name="tireqty" size="3" maxlength="3" /></td>
@@ -23,6 +25,10 @@
      <td>Spark Plugs</td>
      <td><input type="text" name="sparkqty" size="3" maxlength="3" /></td>
     </tr>
+      <tr>
+        <td>GPS</td>
+        <td><input type="text" name="gpsqty" size="3" maxlength="3" /></td>
+      </tr>
     <tr>
       <td>Shipping Address</td>
       <td><input type="text" name="address" size="50" maxlength="100"</td>
